@@ -10,7 +10,7 @@ sudo add-apt-repository ppa:linuxuprising/java
 sudo apt-get update
 echo debconf shared/accepted-oracle-license-v1-2 select true | debconf-set-selections
 echo debconf shared/accepted-oracle-license-v1-2 seen true | debconf-set-selections
-sudo apt-get install -y oracle-java12-installer ca-certificates-java python
+sudo apt-get install -y oracle-java11-installer ca-certificates-java python
 #    apt-get install -y software-properties-common
 #    add-apt-repository -y ppa:webupd8team/java
 #    apt-get update
@@ -18,6 +18,8 @@ sudo apt-get install -y oracle-java12-installer ca-certificates-java python
 #   echo debconf shared/accepted-oracle-license-v1-1 seen true | debconf-set-selections
 #    apt-get install -y oracle-java9-installer ca-certificates-java python
 )
+
+export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
 
 ANDROID_SDK=$HOME/cached/android-sdk
 if [ ! -d "$ANDROID_SDK" ]
@@ -30,7 +32,6 @@ then
     rm android-sdk.zip
 fi
 
-export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions'
 yes | $ANDROID_SDK/tools/bin/sdkmanager --licenses > /dev/null
 
 $ANDROID_SDK/tools/bin/sdkmanager \
